# datatrans-api-python-types

./: datatrans-openapi-specification-2.0.32.json  pyproject.toml  readme.md  setup.py
datatrans_api_python_types/: __init__.py  generate.py
src/datatrans_api_python_types/: __init__.py  generate.py
