[project]
name = "datatrans-api-python-types"
version = "0.1.0"
dependencies = ["openapi3~=1.7.0", "black"]

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[project.scripts]
datatrans-api-python-types = "datatrans_api_python_types:entry_point"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/tests"
files = ["src", "tests"]
strict = true
warn_unreachable = true
extra_checks = true
enable_error_code = "possibly-undefined, redundant-expr, truthy-iterable, truthy-bool"

[tool.pytest.ini_options]
testpaths = "tests"

[[tool.mypy.overrides]]
module = ["openapi3.*"]
ignore_missing_imports = true

[tool.black]
target-version = ["py312"]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
force_single_line = true
